--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,8 +1,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../images/hikeLogo.png" height="36">
-                HoCa Hikes</a>
+                <img src="/images/hikeLogo.png" height="36">
+                Stevie's Hikes</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -14,7 +14,7 @@
                         <a class="nav-link" href="../aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../profile.html">Profile</a>
+                        <a class="nav-link" href="/profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../main.html">Main</a>
