--- a/thanks.html
+++ b/thanks.html
@@ -47,6 +47,15 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
+    <div class="card text-center">
+        <div class="card-header">
+          Review received successfully!
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Thanks for submitting your review!</h5>
+          <a href="main.html" class="btn btn-primary">See More Hikes</a>
+        </div>
+</div>
     <!-- stuff -->
 
     <!-- our own footer goes here-->
