added saved.html, saved.js to allow for functionality of bookmarking hikes and connecting the these bookmarks to each user saved on firebase

--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -55,7 +55,7 @@
                 Good morning, <span id="name-goes-here">Name</span>
             </h1>
             <hr />
-            <p>Quote of the day:<span id="quote-goes-here"></span></p>
+            <p>Quote of the day: <span id="quote-goes-here"></span></p>
         </div>
     </div>
 
@@ -81,6 +81,7 @@
                     bulk of the card's content.
                 </p>
                 <a class="btn btn-primary card-href">Read more ...</a>
+                <i class ="material-icons">bookmark_border</i>
             </div>
         </div>
     </template>
